--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,4 @@ SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_library(project_options INTERFACE)
 add_library(project_warnings INTERFACE)
 
-add_subdirectory(3rdParty)
-
-add_subdirectory(w4)
-add_subdirectory(w5)
-add_subdirectory(w7)
-
+add_subdirectory(third_party)
