--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(networked)
+project(multiplayer)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
-SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-add_library(project_options INTERFACE)
-add_library(project_warnings INTERFACE)
+add_subdirectory(tasks)
 
 add_subdirectory(third_party)
