Add solution of w1 and minor fixes

--- a/tasks/w1/CMakeLists.txt
+++ b/tasks/w1/CMakeLists.txt
@@ -1,4 +1,4 @@
-# -------------------- network --------------------
+# -------------------- common --------------------
 
 file(GLOB_RECURSE INFRA_INCLUDE infra/*.hpp)
 file(GLOB_RECURSE INFRA_SOURCE infra/*.cpp)
@@ -7,9 +7,13 @@ file(GLOB_RECURSE INFRA_SOURCE infra/*.cpp)
 file(GLOB_RECURSE NETWORK_INCLUDE network/*.hpp)
 file(GLOB_RECURSE NETWORK_SOURCE network/*.cpp)
 
+file(GLOB_RECURSE PROTOCOL_INCLUDE protocol/*.hpp)
+file(GLOB_RECURSE PROTOCOL_SOURCE protocol/*.cpp)
+
 # -------------------- client --------------------
 
-set(CLIENT_SOURCE client.cpp)
+file(GLOB_RECURSE CLIENT_INCLUDE client/*.hpp)
+file(GLOB_RECURSE CLIENT_SOURCE client/*.cpp)
 
 add_executable(w1-client)
 
@@ -20,17 +24,21 @@ target_include_directories(w1-client
 
 target_sources(w1-client
   PUBLIC
+    ${CLIENT_INCLUDE}
     ${INFRA_INCLUDE}
     ${NETWORK_INCLUDE}
+    ${PROTOCOL_INCLUDE}
   PRIVATE
+    ${CLIENT_SOURCE}
     ${INFRA_SOURCE}
     ${NETWORK_SOURCE}
-    ${CLIENT_SOURCE}
+    ${PROTOCOL_SOURCE}
   )
 
 # -------------------- server --------------------
 
-set(SERVER_SOURCE server.cpp)
+file(GLOB_RECURSE SERVER_INCLUDE server/*.hpp)
+file(GLOB_RECURSE SERVER_SOURCE server/*.cpp)
 
 add_executable(w1-server)
 
@@ -41,10 +49,13 @@ target_include_directories(w1-server
 
 target_sources(w1-server
   PUBLIC
+    ${CLIENT_INCLUDE}
     ${INFRA_INCLUDE}
     ${NETWORK_INCLUDE}
+    ${SERVER_INCLUDE}
   PRIVATE
     ${INFRA_SOURCE}
     ${NETWORK_SOURCE}
+    ${PROTOCOL_SOURCE}
     ${SERVER_SOURCE}
   )
